# thoughttree

./: .gitignore  A-detailed-text-about-"Ukrainian-Girl"-jokes,.md  About-Ukrainian-humor.md  Beispiele-Beispiel12.md  Buch-Beispiel-13,-Seite-123.md  Design-for-a-similar-software.md  Examples.md  Home.md  LICENSE  README.md  ToolTip.py  gpt3completion  pyproject.toml  requirements.txt  thoughttree.py
Buch/: Beispiele-Beispiel11.md
thoughttree/: AboutDialog.py  AlternativeLabel.py  AlternativeSheet.py  AutoScrollbar.py  ChatFileManager.py  Colors.py  CommandLine.py  Config.py  Console.py  Cursorline.py  Dragability.py  EventLog.py  EventPlayer.py  EventRecorder.py  ExceptionBlockedIO.py  ExploreOutline.py  Files.py  FinishReasonIcon.py  FoldablePane.py  Fonts.py  ForkFrame.py  ForkableSheet.py  ForkableText.py  GPT.py  GeneratedTitle.py  HidableFrame.py  History.py  Imports.py  Improvement.py  InitialSheetHelp.py  InlineForm.py  InsertionIcon.py  IterateRangeForm.py  IterateRangeInlineForm.py  Keys.py  LabeledEntry.py  LabeledLabel.py  LineHandling.py  ListDialog.py  Log.py  (+72 more)
thoughttree/demos/: Prompt - Improve.txt
thoughttree/examples/: Default.txt  Log.py  Video comments.txt  Video transcript.txt
thoughttree/prompts/: Alternative statement completions.pmt  An in depth detailed discussion.pmt  Analyzing text in depth.pmt  Changes as code.pmt  Chapter eval list examples.pmt  Code block file name.pmt  Code enhance.pmt  Comment text.pmt  Describe all aspects.pmt  Differing alternatives.pmt  Draft.pmt  Explain meaning of relevant terms.pmt  Find any issues.pmt  (+69 more)
(+2 files in other folders)
